@@ -113,6 +113,7 @@ my %config = ('name'                   => 'Thruk',
                                           'action_icon'         => \&Thruk::Utils::Filter::action_icon,
                                           'logline_icon'        => \&Thruk::Utils::Filter::logline_icon,
                                           'calculate_first_notification_delay_remaining' => \&Thruk::Utils::Filter::calculate_first_notification_delay_remaining,
+                                          'set_favicon_counter' => \&Thruk::Utils::Status::set_favicon_counter,
 
                                           'version'        => $VERSION,
                                           'branch'         => $branch,
@@ -147,6 +148,7 @@ my %config = ('name'                   => 'Thruk',
                                           'hide_backends_chooser' => 0,
                                           'backend_chooser'       => 'select',
                                           'play_sounds'    => 0,
+                                          'fav_counter'    => 0,
                                           'uri_filter'     => {
                                                 'bookmark'      => undef,
                                                 'referer'       => undef,
