@@ -1,0 +1,1 @@
+../../Classic/images/favicon_counter.png
